# ffi-project

./: .gitignore  README.md  cabal.project
binius-ffi/: Cargo.toml  binius-ffi.cabal  hsbindgen.toml
binius-ffi/src/: BiniusFfi.hs  lib.rs
test/: test.cabal
test/app/: Main.hs
