[package]
name = "binius-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
hs-bindgen = { version = "0.9.0", features = ["full"] }
binius_circuits = { git = "https://github.com/storojs72/binius", branch = "experimenting" }
binius_core = { git = "https://github.com/storojs72/binius", branch = "experimenting" }
binius_field = { git = "https://github.com/storojs72/binius", branch = "experimenting" }
binius_hal = { git = "https://github.com/storojs72/binius", branch = "experimenting" }
binius_hash = { git = "https://github.com/storojs72/binius", branch = "experimenting" }
binius_math = { git = "https://github.com/storojs72/binius", branch = "experimenting" }
groestl_crypto = { package = "groestl", version = "0.10.1" }
bumpalo = { version = "3.16.0", features = ["collections"] }

[lib]
crate-type = ["staticlib"]
